--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 # !!! Comment if you are using this repository as a template!
 /[Aa]ssets/Scenes*
 /[Aa]ssets/Resources*
+/[Aa]ssets/Photon*
 
 # Forcing BillingMode.json to be ignored
 # !!! Again, comment if you are using this as a temmplate!
